tests/ui/lazy-type-alias/def-site-param-defaults-wf.stderr
error[E0080]: attempt to compute `0_usize - 1_usize`, which would overflow
  --> $DIR/def-site-param-defaults-wf.rs:5:45
   |
LL | type Alias<T = Vec<str>, const N: usize = { 0 - 1 }> = T;
   |                                             ^^^^^ evaluation of constant value failed here

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/def-site-param-defaults-wf.rs:5:16
   |
LL | type Alias<T = Vec<str>, const N: usize = { 0 - 1 }> = T;
   |                ^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
note: required by an implicit `Sized` bound in `Vec`
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0080, E0277.
For more information about an error, try `rustc --explain E0080`.
